--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@openzeppelin/contracts": "^4.9.0",
     "chai": "^4.3.7",
     "dotenv": "^16.1.1",
     "ethereum-waffle": "^4.0.10",
