--- a/Carbon Credit MarketPlace/package.json
+++ b/Carbon Credit MarketPlace/package.json
@@ -4,14 +4,17 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@openzeppelin/contracts": "^4.9.0",
+    "@pinata/sdk": "^2.1.0",
     "chai": "^4.3.7",
     "dotenv": "^16.1.1",
     "ethereum-waffle": "^4.0.10",
     "ethers": "5.7.2",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.14.1",
     "hardhat-contract-sizer": "^2.9.0",
     "hardhat-deploy": "^0.11.30",
     "hardhat-gas-reporter": "^1.0.9",
+    "path": "^0.12.7",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
